# Auctus-ODRI-3R-Control

./: .gitignore  .gitmodules  README.md  kinematic.m  mgd.m  mgi.m  plotDotAndArm.m
Matlab/: README.md  disp_eqs.m  dynamic.m  kinematic.m  mgd.m
Matlab/equation_paul/: dyalitic_2angles_symbolic.m  equations_de_paul.m  get_arg_nearest_zero.m  get_coeffs_2angles.m  get_coeffs_atan2.m  get_coeffs_type2.m  identif_equ_paul.m  solve_type_1.m  solve_type_2.m  solve_type_3.m  solve_type_4.m  solve_type_5.m  solve_type_6.m  solve_type_7.m  solve_type_8.m  solve_type_g.m  verif_zero.m
Matlab/kinematics/: getJacobian.m
Matlab/tr_homogenes/: th_roty.m  th_trans.m
Pinocchio/: README.md  environment.yml  meshcat-viewer.py
Urdf/: Dockerfile  Justfile
Urdf/leg3dof_ws/src/leg3dof_description/: CMakeLists.txt  package.xml
Urdf/leg3dof_ws/src/leg3dof_description/launch/: gazebo.launch.py
Urdf/leg3dof_ws/src/leg3dof_description/urdf/: leg3dof.urdf
data_collection/: .gitignore  Makefile  README.md  brk-20-0_05-0_1-pertubated.csv  brk-30-0-0_1.csv  filename.csv
data_collection/src/: basic_mouvements.cpp  basic_mouvements.h  csv_filler.cpp  csv_filler.h  eigen_test.cpp  identification.cpp  main.cpp  mgi.cpp  mgi.h  motor_mapping.h  one_leg_control.cpp  test.cpp  (+5 more)
docs/: calibration.md  control.md  modeling.md
odri_docker/: .dockerignore  Dockerfile
optitrack/: Take 2026-01-12 01.56.14 PM.csv  display_position.py  main.py  obtain_position_true.py  setup_csv.py
ros_docker/: Dockerfile  Justfile  README.md
tr_homogenes/: README.md  th_inv.m  th_rotx.m  th_rotz.m
(+22 files in other folders)
