<?xml version="1.0"?>
<package format="3">

  <name>leg3dof_description</name>
  <version>0.0.1</version>
  <description>Minimal Leg3DOF URDF for Gazebo</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
	  <build_type>ament_cmake</build_type>
	</export>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>

